# querido-diario

./: .env.example  .env.sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CITIES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile-shell  LEIAME.md  LICENSE  LICENSE.md  Makefile  README.md  SPIDER-GUIDELINES.md  cianorte.html  docker-compose.yml  init-user-db.sh  pyproject.toml  sp_bauru  teste_deploy  testes.sh  windows_users.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: novo_municipio.yaml  novo_sistema_replicavel.yaml  revisao_retroativa.yaml
.github/workflows/: build.yml  daily_crawl.yaml  deploy.yml  monthly_crawl.yaml  periodic_crawl.yaml  schedule_spider.yaml  schedule_spider_by_date.yaml  schedule_spider_date_range.yaml  schedule_spider_yearly.yaml  spiders.yml  tests.yml  update_coverage.yml  update_spider_status.yaml  weekly_crawl.yaml
containers/: Dockerfile.kafka
contrib/: sample.env
data/: municipios.csv
data_collection/: .local.env  Dockerfile  [PARCIAL][DOBR] dados_mapeamento-4410-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4440-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4470-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4500-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4530-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4560-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4590-5571.csv  [PARCIAL][DOBR] dados_mapeamento-4620-5571.csv  [PORTALIOP] dados_mapeamento.csv  local.env  log_ ba_ituacu  log_ ba_laje  log_ ba_macajuba  log_ ba_mucuri  log_ba_irara  log_ba_medeiros_neto_2018  log_sp_suzano  raspagem.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scheduler.py  scrapinghub.yml  scrapy.cfg
data_collection/gazette/: __init__.py  exceptions.py  extensions.py  items.py  main.py  middlewares.py  monitors.py  pipelines.py  settings.py  utils.py
data_collection/scripts/: spider_template.py
data_collection/tests/: test_dates.py  test_extraction.py  (+1 more)
database/: __init__.py  models.py
docs/: CODE_OF_CONDUCT-en-US.md  CODE_OF_CONDUCT.md  CONTRIBUTING-en-US.md  CONTRIBUTING.md  FUNDING.yml  README-en-US.md  README.md  SUPPORT-en-US.md  SUPPORT.md  TROUBLESHOOTING-en-US.md  TROUBLESHOOTING.md  remote-dev-evaluation.md  remote_dev_environment_eval.md  tutorial-setup-codespaces.md  windows_installation.md  windows_instructions.md
processing/: .dockerignore  Dockerfile  download-tika-app.py  requirements.in  requirements.txt  seed.sh  tasks.py
querido_diario/: requirements.txt  scheduler.py  scrapinghub.yml  setup.py
requirements/: requirements.in  requirements.txt
scripts/: enabled_spiders.py  generate_spiders.py  periodic_schedule_job.py  schedule_job.py  scheduler.py  spider_template.py
web/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
(+2416 files in other folders)
