[project]
name = "querido-diario"
version = "0.1.0"
description = "O Querido Diário é o projeto que oferece uma ferramenta que amplia o acesso à informação sobre a administração pública brasileira em sua mais local instância - os municípios -, através da abertura e centralização de diários oficiais eletrônicos."
authors = [
    {name = "Open Knowledge Brasil - Rede pelo Conhecimento Livre",email = "contato@ok.org.br"}
]
license = {text = "MIT"}
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.4,<3.0.0)",
    "scrapy-zyte-smartproxy (>=2.4.1,<3.0.0)",
    "awscli (>=1.44.9,<2.0.0)",
    "boto3 (>=1.42.19,<2.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "chompjs (>=1.4.0,<2.0.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "itemadapter (>=0.13.0,<0.14.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "spidermon (>=1.24.0,<2.0.0)",
    "w3lib (>=2.3.1,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pip-tools (>=7.5.2,<8.0.0)",
]

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"
